Fix indexing, search, assistant, and management UI